[#26] Semi-working implementation of block patching.
- Right now, it will insert either on the line before or after the block
  reference.  Idealy we'd:
  - Make 'before' insert at the beginning of the line of the block
    reference instead of on the preceding line.  If folks want to insert
    on the preceding line, they can just add a new line at the end of
    their content.
  - Add a new 'on' position that inserts at the end of the line of the
    block reference, but before the block reference ID itself.  This
    should become the default.
  - Leave 'after' as-is.
- There's a weird behavior right now where it doesn't appear that the
  CachedMetadata object is being updated when I make file changes.  This
  means that repeated REST requests will possibly insert on the wrong
  line.  I don't know what's causing this and _assume_ it's an Obsidian
  bug, but it might be something else.  I do believe that the
  CachedMetadata object is updated when I PATCH relative to a heading, at
  least.
